# api-router

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux.yml
config/: router.example.json
deploy/: deploy-ubuntu.sh  deploy-windows.ps1  llm-router.service  nginx.conf  run.sh  start-router-ubuntu.sh  start-router.ps1
release/ui/: index.html
release/ui/assets/: index-BfK3C004.js  index-CB3j9E6g.js  index-CrCeR9SA.css
scripts/: sdk_test.py
src/: admin.rs  auth.rs  config.rs  gemini.rs  main.rs  proxy.rs  state.rs  usage.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  types.ts
ui/src/components/: layout.tsx
ui/src/components/ui/: badge.tsx
ui/src/hooks/: use-api.tsx
ui/src/pages/: GroupsPage.tsx  LoginPage.tsx  StatsPage.tsx  TargetsPage.tsx
